--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -9,24 +9,36 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   height: 100%;
+  scroll-behavior: smooth;
 }
 body {
   font-family: v.$main-font;
   font-size: 1.6rem;
   min-height: 100%;
+  color: v.$black;
+  background-color: v.$beige;
 }
-// .container {
-//   width: 95%;
-//   max-width: 1200px;
-//   margin: 0 auto;
-// }
-// .container-sm {
-//   max-width: 70rem;
-//   margin: 0 auto;
-// }
+.container {
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.container-sm {
+  max-width: 70rem;
+  margin: 0 auto;
+}
 a {
   text-decoration: none;
 }
 img {
   max-width: 100%;
+  height: auto;
+}
+
+ul {
+  list-style: none;
+}
+
+section {
+  padding-block: 4rem 2rem;
 }
