--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -3,7 +3,7 @@
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 html {
   font-size: 62.5%;
@@ -23,14 +23,23 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+.section {
+  padding-block: 1rem 2rem;
+}
 .container-sm {
   max-width: 70rem;
   margin: 0 auto;
 }
+
 a {
   text-decoration: none;
 }
 img {
+  display: block;
   max-width: 100%;
   height: auto;
 }
@@ -39,6 +48,16 @@ ul {
   list-style: none;
 }
 
-section {
-  padding-block: 4rem 2rem;
+.main {
+  overflow: hidden; //. animation scrollReveal
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: v.$red;
+}
+::-webkit-scrollbar-track {
+  background-color: v.$beige;
 }
