--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -2,6 +2,7 @@
 $main-font: "Mukta", sans-serif;
 $title-font: "Oswald", sans-serif;
 $logo-font: "Playfair Display", serif;
+$name-font: "Pacifico", cursive;
 
 //*media Query
 $phone: 480px;
@@ -10,22 +11,34 @@ $desktop: 1024px;
 
 //*Colores
 
-$light-brown: rgba(208, 188, 168, 1);
-$orange: #fcb900;
+$light-brown: #c9b78f;
+$orange: #d3591a;
+$dark-orange: #f07167;
 $pink: rgba(212, 172, 207, 0.927);
 $light-purple: #d1d5db;
-$light-pink: #fcc3d9c0;
+$light-pink: #ddb7bd;
 $beige: #e6e1cd;
 $light-grey: #d6d6d6;
 $grey: rgb(58, 58, 58);
 $white: rgb(255, 255, 255);
 $black: rgb(0, 0, 0);
 $light-black: #332e2e;
-$royal-blue: #2a66ad;
+$royal-blue: #81b29a;
 $purple: rgb(204, 191, 215);
-$dark-purple: rgb(187, 152, 215);
-$cyan: rgb(71, 204, 204);
-$red: rgb(212, 140, 140);
+$dark-purple: #684756;
+$cyan: #8ecae6;
+$light-red: #dbaeae;
+$red: #d48c8c;
+$dark-red: #8a4c4c;
+$green: #899e8b;
+$brown: #a98467;
+$dark-brown: #524d45;
+$blue: #7ea8be;
+$dark-blue: #7ea8be;
+$yellow: #f59e03;
+$dark-yellow: #e3c37f;
+$dark-beige: #fed9b7;
+$light-beige: #e6e1cd;
 //* separacion
 $separacion: 5rem;
 
