--- a/src/scss/components/_project-pages.scss
+++ b/src/scss/components/_project-pages.scss
@@ -3,31 +3,233 @@
 
 .gallery__projects-img {
   margin: 1rem;
-  padding: 2rem;
+
+  @include m.tablet {
+    margin: 1rem 4rem 1rem 4rem;
+    padding: 1rem;
+  }
+  @include m.desktop {
+    width: 80%;
+    margin: 0 auto 4rem auto;
+    padding: 2rem;
+  }
 }
 
 .carousel-control-next i {
-  font-size: 4rem;
+  font-size: 2rem;
   color: #000000;
+  @include m.tablet {
+    font-size: 4rem;
+  }
 }
 
 .carousel-control-prev i {
-  font-size: 4rem;
+  font-size: 2rem;
+
+  @include m.tablet {
+    font-size: 4rem;
+  }
 }
 
 .carousel-caption {
   background-color: v.$beige;
   margin-top: 2rem;
   border-radius: 2rem;
+
+  h5 {
+    font-size: 1.7rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
 }
 
 #carouselExampleDark {
-  border: 5px solid v.$red;
-  border-radius: 5px;
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3), 0 25px 50px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 15px 20px v.$light-brown, 0 25px 50px v.$light-brown;
 
   transition: transform 0.3s ease;
 }
+
+.d-block {
+  &.w-100 {
+    border-radius: 20px;
+    background-color: v.$beige;
+  }
+}
+
 #carouselExampleDark:hover {
   transform: scale(1.05);
+}
+
+.project__description-info {
+  margin-top: 3rem;
+  background-color: v.$white;
+  border-radius: 121px 32px 32px 148px;
+  -moz-border-radius: 121px 32px 32px 148px;
+  -webkit-border-radius: 121px 32px 32px 148px;
+  border: 0px solid #000000;
+  @include m.tablet {
+    margin-top: 5rem;
+  }
+}
+.project__title-wrapper {
+  position: relative;
+  padding-top: 3rem;
+  margin: 2rem auto 0.5rem auto;
+  width: 200px;
+}
+
+.project__title-text {
+  text-align: center;
+  font-family: v.$title-font;
+  font-weight: v.$bold;
+  font-size: 3rem;
+  position: relative;
+  z-index: 2;
+}
+
+.project__title-shape {
+  background-color: v.$red;
+  width: 35px;
+  height: 25px;
+  z-index: 1;
+  position: absolute;
+  top: 3rem;
+  right: -0.5rem;
+}
+
+.description__image {
+  position: relative;
+  width: 400px;
+  margin: 4rem auto;
+  padding-left: 2rem;
+}
+.description__img {
+  max-width: 75%;
+  position: relative;
+  z-index: 1;
+  border-radius: 5px;
+  @include m.tablet {
+    max-width: 95%;
+  }
+}
+
+.description__box-shadow {
+  border-radius: 5px;
+  width: 300px;
+  height: 250px;
+  left: 3rem;
+  top: 2rem;
+  position: absolute;
+  background-color: v.$red;
+  box-shadow: 0 10px 15px v.$red, 0 25px 50px v.$red;
+
+  @include m.tablet {
+    width: 350px;
+    height: 300px;
+    left: 5rem;
+    top: 3rem;
+  }
+}
+.description__content {
+  padding: 0.5rem 3rem 2rem 3rem;
+  margin: 0 auto;
+  @include m.tablet {
+    padding: 2rem 10rem 2rem 10rem;
+    @include m.grid(2, 1, 2fr 1fr);
+  }
+}
+
+.project_section-title {
+  text-align: center;
+  font-weight: v.$black;
+  font-size: 2rem;
+  margin: 1rem 0 2rem 0;
+}
+.content-info-project {
+  color: v.$grey;
+  font-size: 1.5rem;
+}
+
+.skills__used {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 1rem;
+  @include m.desktop {
+    @include m.grid(2, 25px);
+  }
+
+  button {
+    width: 150px;
+
+    color: v.$dark-red;
+    height: 60px;
+    border: 3px solid v.$dark-red;
+    border-radius: 45px;
+    transition: all 0.3s;
+    cursor: pointer;
+    background: white;
+    font-size: 1.2em;
+    font-weight: 550;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  button:hover {
+    background: v.$dark-red;
+    color: v.$white;
+    font-size: 1.5em;
+  }
+}
+.skill__used {
+  margin: 1rem auto;
+}
+
+.repository__button {
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  position: relative;
+  background-color: rgb(31, 31, 31);
+  overflow: hidden;
+  margin: 2rem auto 1rem auto;
+}
+
+.svgIcon {
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.text {
+  position: absolute;
+  color: rgb(255, 255, 255);
+  width: 120px;
+  font-weight: 600;
+  opacity: 0;
+  transition-duration: 0.4s;
+}
+
+.repository__button:hover {
+  width: 125px;
+  transition-duration: 0.4s;
+  border-radius: 30px;
+}
+
+.repository__button:hover .text {
+  opacity: 1;
+  transition-duration: 0.4s;
+}
+
+.repository__button:hover .svgIcon {
+  opacity: 0;
+  transition-duration: 0.3s;
 }
