--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,7 +22,7 @@ $light-grey: #d6d6d6;
 $grey: rgb(58, 58, 58);
 $white: rgb(255, 255, 255);
 $black: rgb(0, 0, 0);
-$light-black: #332e2e;
+$light-black: #242329;
 $royal-blue: #81b29a;
 $purple: rgb(204, 191, 215);
 $dark-purple: #684756;
@@ -31,6 +31,7 @@ $light-red: #dbaeae;
 $red: #d48c8c;
 $dark-red: #8a4c4c;
 $green: #899e8b;
+$dark-green: #575f58f6;
 $brown: #a98467;
 $dark-brown: #524d45;
 $blue: #7ea8be;
