--- a/src/scss/base/_darkmode.scss
+++ b/src/scss/base/_darkmode.scss
@@ -3,8 +3,79 @@
 
 .dark-mode {
   background-color: v.$light-black;
+  .header,
+  .nav__menu,
+  .menu__hidden {
+    background-color: v.$light-black;
+  }
+  .title-text,
+  .title-career,
+  .nav__link,
+  .nav__logo-name,
+  .skills-subtitle,
+  .project__description-content,
+  .project__description-content ol,
+  .nav__toggle {
+    color: v.$beige;
+  }
 
+  p {
+    color: v.$beige;
+
+    .slogan {
+      color: v.$white;
+      background: linear-gradient(
+        90deg,
+        v.$light-black 10%,
+        rgba(212, 135, 138, 0.6783088235294117) 61%
+      );
+    }
+  }
   h1.home__name {
     color: v.$beige;
+  }
+  .ima {
+    color: v.$beige;
+  }
+
+  .home-animation span::after {
+    background-color: v.$light-black;
+
+    border-left: 5px solid v.$light-black;
+  }
+
+  .home__arrow,
+  .home__fire,
+  .contact__social-arrow {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(137deg)
+      brightness(103%) contrast(102%);
+  }
+
+  .contact__data,
+  .form {
+    background-color: v.$grey;
+    -webkit-box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
+    -moz-box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
+    box-shadow: 0px 34px 65px 19px rgba(138, 76, 76, 0.47);
+    border: none;
+  }
+
+  .about {
+    background-color: v.$dark-green;
+  }
+
+  .skills__container,
+  .project__description-info {
+    background-color: v.$dark-brown;
+  }
+  .skills-items:hover {
+    background-color: v.$light-brown;
+  }
+  .contact.section {
+    background-color: v.$light-black;
+  }
+
+  .project-description {
+    color: v.$black;
   }
 }
