--- a/src/scss/layout/_aboutme.scss
+++ b/src/scss/layout/_aboutme.scss
@@ -6,32 +6,6 @@
 .about.section {
   margin-bottom: 5rem;
 }
-//,ABOUT TITLE
-.about__title-wrapper {
-  position: relative;
-  text-align: center;
-  //width: 225px;
-  margin: 0 auto;
-}
-
-.about__title-text {
-  position: relative;
-  z-index: 2;
-  font-size: 2.5rem;
-  font-family: v.$title-font;
-  padding: 0 0.5rem;
-  font-weight: v.$bold;
-}
-
-.about__title-shape {
-  width: 35px;
-  height: 25px;
-  background-color: v.$orange;
-  position: absolute;
-  top: 0.5rem;
-  right: 0;
-  transform: translate(50%, -50%);
-}
 
 //,ABOUT IMG
 .about {
@@ -169,4 +143,51 @@
 
 .contact__button:active {
   transform: scale(0.95);
+}
+
+//, for medium and large screens
+
+.about__container {
+  @include m.tablet {
+    height: 700px;
+    @include m.desktop {
+      height: 600px;
+    }
+    @include m.grid(2, 0.1rem);
+
+    .about__title-wrapper {
+      top: 5rem;
+      order: 0;
+    }
+
+    .about__perfil-img {
+      top: 10rem;
+      order: -1;
+      transform: scale(1.2);
+      @include m.desktop {
+        transform: scale(1.3);
+      }
+    }
+
+    .about__perfil {
+      grid-row: 2;
+      grid-column: 2;
+      position: relative;
+      top: -30rem;
+    }
+
+    .about__buttons {
+      position: relative;
+      top: 15rem;
+      height: 100px;
+      width: auto;
+      display: flex;
+      justify-content: center;
+    }
+    .about__lines {
+      transform: rotate(190deg);
+      right: -2rem;
+      top: -3rem;
+    }
+  }
 }
