--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -103,13 +103,16 @@
 }
 
 .item-1 {
-  background-image: url("../img/harmony-fest.jpg");
+  background-image: url("../img/tasknexus.jpg");
 }
 .item-2 {
   background-image: url("../img/homehunter.jpg");
 }
 .item-3 {
   background-image: url("../img/glowradiance.jpg");
+}
+.item-4 {
+  background-image: url("../img/harmony-fest.jpg");
 }
 .flip-card-back {
   background: linear-gradient(
